# learn_rust

./: .gitignore  Cargo.toml
calculate_area/: Cargo.toml
calculate_area/src/: main.rs
calculate_sum/src/: main.rs
code_wars/: Cargo.toml
code_wars/src/: five_kyu.rs  format_duration.rs  four_kyu.rs  lib.rs  main.rs  preloaded.rs  three_kyu.rs
code_wars/src/five_kyu/: decimal_to_factorial_and_back.rs  ips_between.rs  primes.rs  spin_words.rs  spiralize.rs
code_wars/src/four_kyu/: longest_slide_down.rs  next_bigger_number.rs  range_extraction.rs  sum_of_divided.rs
code_wars/src/three_kyu/: fluid_volume_of_a_heightmap.rs  last_digit.rs
demos/: Cargo.toml
demos/src/: main.rs
echo_client/: Cargo.toml
echo_client/src/: main.rs
echo_server/: Cargo.toml
echo_server/src/: main.rs
from_mvp/: Cargo.toml
from_mvp/src/: advanced_features.rs  main.rs  no_fear_concurrent_and_parallel.rs  object_oriented.rs  pattern_match.rs  smart_pointers.rs
from_mvp/src/advanced_features/: advanced_traits.rs  (+4 more)
hello/src/: lib.rs  main.rs
hello_macro/src/: main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
httpie/: Cargo.toml  README.md
httpie/src/: main.rs
leetcode/src/: add_two_numbers.rs  find_median_sorted_arrays.rs  length_of_longest_substring.rs  longest_palindrome.rs  main.rs  max_area.rs  three_sum.rs  two_sum.rs
pancakes/: Cargo.toml
scrape_url/src/: main.rs
thumbor/: Cargo.toml  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
traffic_light/src/: main.rs
(+17 files in other folders)
