[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2" # web server
anyhow = "1" # 错误处理
base64 = "0.13" # base64 编码处理
bytes = "1" # 处理字节流
image = "0.23" # 处理图片
lazy_static = "1" # 通过宏方便地初始化静态变量
lru = "0.6" # LRU 缓存
percent-encoding = "2" # url 编码/解码
photon-rs = "0.3" # 图片效果
prost = "0.8" # protobuf 处理
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] } # async runtime
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] } # 服务处理以及中间件
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace"] } # http 中间件
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
prost-build = "0.8"